tests/ui/traits/struct-negative-sync-impl.stderr
error[E0277]: `NotSync` cannot be shared between threads safely
  --> $DIR/struct-negative-sync-impl.rs:19:19
   |
LL |     requires_sync(not_sync);
   |     ------------- ^^^^^^^^ `NotSync` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `NotSync`
note: required by a bound in `requires_sync`
  --> $DIR/struct-negative-sync-impl.rs:15:21
   |
LL | fn requires_sync<T: Sync>(_: T) {}
   |                     ^^^^ required by this bound in `requires_sync`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
